# manta-python

./: .dockerignore  Dockerfile  README.rst  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: ci.yaml
docs/: index.rst
docs/api/: manta.wallet.rst
html/: index.html  searchindex.js
html/.doctrees/: environment.pickle  index.doctree
html/.doctrees/api/: manta.payproc.PayProc.doctree  manta.wallet.doctree
html/_modules/manta/: payproc.html  wallet.html
html/api/: manta.payproc.PayProc.html  manta.wallet.html
manta/: payproc.py  wallet.py
manta/new_testing/: messages_pyd.py  payproc_dummy.py  pyd_decimal_config.py  store_dummy.py  wallet_dummy.py
tests/: conftest.py
tests/integration/: test_store_mqtt.py  test_wallet_mqtt.py
tests/old/: walletdummy.conf
tests/unit/: test_payproc.py  test_wallet.py
